[package]
name = "rust-3cx-exporter"
version = "0.1.0"
authors = ["Gaëtan FEREZ <gferez@leonix.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread", "time"] }
prometheus = { version = "0.13.3" }
lazy_static = "1.4"
warp = "0.3.3"
futures = { version = "0.3.25", default-features = false }
rand = "0.8.5"
signal-hook = "0.3.14"
log = "0.4.8"
env_logger = "0.10.0"
serde = { version = "1.0.125", features = ["derive"]}
serde_json = "1.0.59"
spirit = "0.4.21"
spirit-cfg-helpers = "0.4.0"
once_cell = "1.17.0"
arc-swap = "1.6.0"
threadpool = "1.8.1"
reqwest = { version = "0.11.14", features = ["json", "cookies"] }